# JWB_stock_agent_1.2

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  settings.yaml
agent/: core_v1_backup.py  main.py  memory.py  orchestrator.py  prompts.py  router.py  schema.py
agent/workers/: analyst.py  data_agent.py  editor.py  judge.py  scout.py  translator.py  write_agent.py
logs/: agent.log.2026-03-07  cache.db
tests/: test_tools.py
tools/: akshare_tools.py
utils/: data_cleaner.py  logger.py
